# spatialIndex

./: spatialIndex.cabal
src/Data/: MetricSpace.hs  SpatialIndex.hs
test/: MetricSpaceTest.hs  SpatialIndexTest.hs  TestMain.hs
